# mana

./: .gitignore  CMakeLists.txt  README.md
.superpowers/sdd/: task-9-report.md
docs/superpowers/plans/: 2026-07-10-mana-framework.md  2026-07-10-util-refactor.md  2026-07-11-util-enrichment.md
docs/superpowers/specs/: 2026-07-10-mana-framework-design.md  2026-07-10-util-refactor-design.md  2026-07-11-util-enrichment-design.md
examples/: main.cpp
include/mana/: context.h  event_bus.h  export.h  io.h  log.h  mana.h  thread_pool.h  util.h
include/mana/util/: bit.hpp  enum.hpp  fixed.hpp  geo.hpp  hash.hpp  io.hpp  math.hpp  numeric.hpp  optional.hpp  result.hpp  scope_guard.hpp  string.hpp  time.hpp  type_traits.hpp  util.hpp  variant.hpp
src/: context.cpp  event_bus.cpp  framework.cpp  io.cpp  log.cpp  thread_pool.cpp  util.cpp
tests/: test_bit.cpp  test_context.cpp  test_enum.cpp  test_event_bus.cpp  test_fixed.cpp  test_framework.cpp  test_geo.cpp  test_hash.cpp  test_io.cpp  test_io_util.cpp  test_log.cpp  test_math.cpp  test_numeric.cpp  test_optional.cpp  test_result.cpp  test_scope_guard.cpp  test_string.cpp  test_thread_pool.cpp  test_type_traits.cpp  test_util.cpp  test_variant.cpp
